# sp80022suite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
include/: matrix.h  stat_fncs.h
src/: approximateEntropy.c  blockFrequency.c  cusum.c  discreteFourierTransform.c  frequency.c  linearComplexity.c  longestRunOfOnes.c  matrix.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  pythonInterface.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  serial.c  universal.c
tests/: base.py  e_high_precision.py  test_approximate_entropy.py  test_block_frequency.py  test_cumulative_sums.py  test_discrete_fourier_transform.py  test_frequency.py  test_linear_complexity.py  test_longest_run_of_ones.py  test_non_overlapping_template_matchings.py  test_overlapping_template_matchings.py  test_random_excursions.py  test_random_excursions_variant.py  test_rank.py  test_runs.py  test_serial.py  test_universal.py
